2001-09-25  Thien-Thi Nguyen  <ttn@glug.org>

	* chars.h (SCM_MAKE_CHAR): Use `scm_t_bits' instead of `intptr_t'.
	Thanks to Golubev I. N.

2001-09-25  Gary Houston  <ghouston@arglist.com>

	* ports.c (scm_drain_input): extended the docstring.  thanks to
	Alex Schroeder and Thien-Thi Nguyen.

2001-09-23  Mikael Djurfeldt  <mdj@linnaeus>

	* validate.h (SCM_NUM2FLOAT, SCM_NUM2DOUBLE,
	SCM_VALIDATE_FLOAT_COPY, SCM_VALIDATE_DOUBLE_COPY): New
	macros. (The NUM names might soon change.)

2001-09-22  Rob Browning  <rlb@defaultvalue.org>

	* numbers.h
	(scm_num2float): prototype added.
	(scm_float2num): prototype added.
	(scm_num2double): prototype added.
	(scm_double2num): prototype added.

2001-09-22  Mikael Djurfeldt  <mdj@linnaeus>

	* Makefile.am: Distribute num2float.i.c.

	* num2float.i.c: New file, multiply included by numbers.c, used
	to "templatize" the float <-> num conversion routines.

	* numbers.c: New functions: scm_num2float, scm_float2num,
	scm_num2double, scm_double2num.

2001-09-21  Rob Browning  <rlb@defaultvalue.org>

	* strings.h (SCM_SET_STRING_LENGTH): coerce "l" to a long.
	Otherwise it fails on the alpha.  However, we might rather choose
	this size conditionally.

	* numbers.c (scm_gcd): change "k" to a long from an int.
	Otherwise it fails on the alpha.  However, we might rather choose
	this size conditionally.

	* error.c (scm_wta): coerce char* to intptr_t before int
	assignment.

	* debug.c (debugobj_print): coerce scm_intprint arg 1 to long, not
	int.

	* chars.h (SCM_MAKE_CHAR): coerce value to intptr_t.

2001-09-20  Mikael Djurfeldt  <mdj@linnaeus>

	* numbers.c (scm_integer_expt): Accept inexact integer in second
	argument.  (Thanks to Bill Schottstaedt.)

2001-09-20  Rob Browning  <rlb@defaultvalue.org>

	* .cvsignore: add version.h

	* versiondat.h.in: removed (obsolete).

	* version.h.in: renamed from version.h.
	(SCM_GUILE_MAJOR_VERSION): new public macro.
	(SCM_GUILE_MINOR_VERSION): new public macro.